...
                    <subviews>
                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L0P-Y6-Qe3">
                            <rect key="frame" x="0.0" y="0.0" width="393" height="666"/>
                            <subviews>
                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Contraseña" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ecz-a3-NjT" customClass="StyledTextField" customModule="GopeTalkie" custo
                                    <rect key="frame" x="26" y="145" width="341" height="50"/>
                                    <accessibility key="accessibilityConfiguration" identifier="loginPassword"/>
                                    <constraints>
                                        <constraint firstAttribute="height" constant="50" id="3kL-yv-sbN"/>
                                    </constraints>
                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                    <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                </textField>
                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Correo Electronico" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uHd-AK-stL" customClass="StyledTextField" customModule="GopeTalki
                                    <rect key="frame" x="26" y="75" width="341" height="50"/>
                                    <accessibility key="accessibilityConfiguration" identifier="loginEmail"/>
                                    <constraints>
                                        <constraint firstAttribute="height" constant="50" id="gGh-Dk-C6q"/>
                                    </constraints>
                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                    <textInputTraits key="textInputTraits" keyboardType="emailAddress" textContentType="email"/>
                                </textField>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mm8-tT-fWf">
                                    <rect key="frame" x="72" y="235" width="111" height="50"/>
                                    <accessibility key="accessibilityConfiguration" identifier="loginEnter"/>
                                    <constraints>
                                        <constraint firstAttribute="width" constant="111" id="PJo-yF-HiQ"/>
                                        <constraint firstAttribute="height" constant="50" id="fuk-Wj-MLy"/>
                                    </constraints>
                                    <state key="normal" title="Button"/>
                                    <buttonConfiguration key="configuration" style="filled" title="Entrar">
...
